fix: reset home-title z-index to prevent covering navbar

--- a/src/assets/helpers/_custom.scss
+++ b/src/assets/helpers/_custom.scss
@@ -94,7 +94,7 @@ $light-brown: #675a55;
   position: relative;
 
   .home-title{
-    z-index: 9999;
+    z-index: 1030;
     font-size: 20px;
     color: #ffffff;
     background-color: rgba(0, 0, 0, 0.3);
